cmake_minimum_required(VERSION 3.10)
project(pascal-interpreter)
set(CMAKE_CXX_STANDARD 17)
set(TARGET pascal-interpreter)
add_library(pascal-interpreter_body src/lexer.cpp src/lexer.h src/parser.cpp src/parser.h)
target_sources(pascal-interpreter_body PRIVATE src/token.cpp src/interpreter.cpp)
add_executable(cal1 src/cal1.cpp)
target_link_libraries(cal1 PRIVATE pascal-interpreter_body)
add_subdirectory(test)