cmake_minimum_required(VERSION 3.10)
project(pascal-interpreter)
set(CMAKE_CXX_STANDARD 17)
find_package(fmt)
set(TARGET pascal-interpreter)
add_library(pascal-interpreter_body src/lexer.cpp src/lexer.h src/parser.cpp src/parser.h src/symbol.cpp src/symbol.h)
target_include_directories(pascal-interpreter_body PUBLIC thirdparty)
target_sources(pascal-interpreter_body PRIVATE src/token.cpp src/interpreter.cpp)
target_link_libraries(pascal-interpreter_body fmt::fmt)
add_subdirectory(test)
add_subdirectory(calculator)
add_executable(main main.cpp)
target_include_directories(main PRIVATE thirdparty)
target_link_libraries(main fmt::fmt)