include_directories("../lib")
add_executable(ReadCustomerTable_benchmark ReadCustomerTable_benchmark.c)
target_link_libraries(ReadCustomerTable_benchmark df347)
add_executable(ReadOrderTable_benchmark ReadOrderTable_benchmark.c)
target_link_libraries(ReadOrderTable_benchmark df347)
add_executable(ReadLineitemTable_benchmark ReadLineitemTable_benchmark.c)
target_link_libraries(ReadLineitemTable_benchmark df347)
add_executable(CreateCustomerIndex_benchmark CreateCustomerIndex_benchmark.c)
target_link_libraries(CreateCustomerIndex_benchmark df347)
add_executable(CreateOrderIndex_benchmark CreateOrderIndex_benchmark.c)
target_link_libraries(CreateOrderIndex_benchmark df347)
add_executable(CreateLineitemIndex_benchmark CreateLineitemIndex_benchmark.c)
target_link_libraries(CreateLineitemIndex_benchmark df347)
add_executable(PrintDate_benchmark PrintDate_benchmark.c)
target_link_libraries(PrintDate_benchmark df347)
add_executable(PrintPrice_benchmark PrintPrice1_benchmark.c)
target_link_libraries(PrintPrice_benchmark df347)
add_executable(read_and_index read_and_index.c)
target_link_libraries(read_and_index df347)

add_executable(benchmark benchmark1.c)
target_link_libraries(benchmark df347)