add_library(df347 STATIC
        io.c io.h
        util.c
        index.c index.h
        array.c array.h
        memorypool.c memorypool.h
        list.c list.h
        hashmap.c hashmap.h
        priorityqueue.c priorityqueue.h
        aggregation.c aggregation.h
        recordminheap.c recordminheap.h
        )